--- a/lib/l10n/arbs/intl_ko.arb
+++ b/lib/l10n/arbs/intl_ko.arb
@@ -1,8 +1,8 @@
 {
-  "@@last_modified": "2025-02-04T22:53:33.904153",
+  "@@last_modified": "2025-02-06T14:22:32.438287",
   "@@locale": "ko",
-  "The recipe is already registered.": "이미 등록되어 있는 레시피입니다.",
-  "@The recipe is already registered.": {
+  "L10nsRecipeListContext_toastMessage": "이미 등록되어 있는 레시피입니다.",
+  "@L10nsRecipeListContext_toastMessage": {
     "description": "It's showed up when a duplicated recipe card is registered to list.",
     "type": "text",
     "placeholders": {}
