--- a/lib/l10n/arbs/intl_en.arb
+++ b/lib/l10n/arbs/intl_en.arb
@@ -1,7 +1,19 @@
 {
-  "@@last_modified": "2025-02-06T14:22:32.438287",
+  "@@last_modified": "2025-03-03T21:44:28.816515",
   "@@locale": "en",
 
+  "L10nsFarmGroupEditorContext_farmShapeSelectionHeader": "Farm Shapes",
+  "@L10nsFarmGroupEditorContext_farmShapeSelectionHeader": {
+    "description": "It is a header text of farm type selection.",
+    "type": "text",
+    "placeholders": {}
+  },
+  "L10nsFarmGroupEditorContext_farmGroupSelectionHeader": "Farm Groups",
+  "@L10nsFarmGroupEditorContext_farmGroupSelectionHeader": {
+    "description": "It is a header text of farm group selection.",
+    "type": "text",
+    "placeholders": {}
+  },
   "L10nsFarmCardContext_footerFertilizerTooltip": "You need to use {fertilizerName} {countOfNeededFertilizer} times for each growth to get giant crops.",
   "@L10nsFarmCardContext_footerFertilizerTooltip": {
     "description": "It is a tooltip message of the fertilizer in farm card's footer.",
